--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,13 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.4",
     "passport": "^0.4.0",
+    "passport-google-token": "^0.1.2",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.2.0",
     "underscore": "^1.9.1",
     "validator": "^10.4.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.10"
   }
 }
