--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react": "^16.8.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-google-login": "^5.0.2",
     "react-moment": "^0.8.4",
+    "react-native-hr": "^1.1.4",
+    "react-native-hr-component": "^2.0.2",
     "react-popper": "^1.3.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
